# bevy_client_server_test

./: .gitignore  Cargo.toml  docker-compose.yml
client/: Cargo.toml  Dockerfile  index.html
client/src/: main.rs
server/: Cargo.toml  Dockerfile
server/src/: main.rs
