[package]
name = "server"
version = "0.1.0"
authors = ["Robin Lacey <robindelacey@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.118"
bevy = {version="0.4.0", default-features=false}
simple_logger = "1"
cfg-if = "1.0"
log = "0.4"
console_log = "0.2"

[dependencies.bevy_networking_turbulence]
git = "https://github.com/smokku/bevy_networking_turbulence"
rev = "24ea73a937cd70bab21c2a81bcab9797081577d4"
default-features=false
features = ["use-webrtc"]


